# geodata-workbench

./: .dockerignore  .env.example  .gitattributes  .gitignore  DESIGN.md  Dockerfile  OPERATIONS.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  setup  setup.ps1
.streamlit/: config.toml
alembic/versions/: 20260301_0001_initial_schema.py  20260302_0003_add_job_progress_columns.py
app/: api.py  config.py  db.py  main.py  models.py  schemas.py  setup_cli.py
app/repositories/: __init__.py  records.py
app/services/: __init__.py  conversion_service.py  map_service.py  secrets_service.py  storage_service.py  upload_service.py  wfs_client.py  wfs_service.py
app/ui/: __init__.py  listing.py
apps/api/: Dockerfile  alembic.ini
apps/api/alembic/: env.py
apps/api/alembic/versions/: 140622346395_initial_schema.py  20260301_0001_initial_schema.py  20260302_0002_add_app_secrets_table.py  20260302_0003_add_job_progress_columns.py
apps/api/app/: api.py  config.py  db.py  listing.py  models.py  setup_cli.py
apps/api/app/collectors/: __init__.py  uploads.py  wfs.py
apps/api/app/jobs/: __init__.py  conversion.py  progress.py  runner.py  wfs.py
apps/api/app/repositories/: __init__.py  records.py
apps/api/app/services/: __init__.py  conversion_service.py  geodata_metadata.py  map_service.py  path_service.py  storage_service.py
apps/web/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
apps/web/src/: App.tsx  api.ts  error.ts  main.tsx  store.ts  styles.css  types.ts
docs/: OPERATIONS.md  upload-delete-architecture.md
resources/wfs/: 브이월드_WFS_컬럼정보.xlsx
sample_data/: sample2.csv
tests/: test_conversion_naming.py  test_conversion_service.py  test_job_runner.py  test_listing_utils.py  test_map_service.py  test_setup_cli.py  test_storage_service.py  test_wfs_service.py
tools/collectors/: wfs_download.py
(+9 files in other folders)
