[project]
name = "geodata-dashboard"
version = "0.1.0"
description = "Local geodata upload, conversion, and visualization dashboard"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.0",
  "folium>=0.19.5",
  "geopandas>=1.0.1",
  "openpyxl>=3.1.5",
  "pandas>=2.2.3",
  "psycopg[binary]>=3.2.3",
  "pydantic>=2.10.4",
  "pyarrow>=18.1.0",
  "pyogrio>=0.10.0",
  "python-dotenv>=1.0.1",
  "sqlalchemy>=2.0.36",
  "streamlit>=1.41.1",
  "streamlit-folium>=0.24.0",
  "xlrd>=2.0.1",
]

[dependency-groups]
dev = [
  "pytest>=8.3.4",
  "ruff>=0.8.4",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "app.services", "app.repositories", "app.ui"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
