[project]
name = "geodata-workbench"
version = "0.1.0"
description = "Local geodata upload, conversion, and visualization dashboard"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "uvicorn>=0.35.0",
  "python-multipart>=0.0.20",
  "fastapi>=0.116.0",
  "alembic>=1.14.0",
  "cryptography>=45.0.0",
  "geopandas>=1.0.1",
  "openpyxl>=3.1.5",
  "pandas>=2.2.3",
  "psycopg[binary]>=3.2.3",
  "pydantic>=2.10.4",
  "pyarrow>=18.1.0",
  "pyogrio>=0.10.0",
  "python-dotenv>=1.0.1",
  "requests>=2.32.3",
  "sqlalchemy>=2.0.36",
  "xlrd>=2.0.1",
]

[dependency-groups]
dev = [
  "pytest>=8.3.4",
  "ruff>=0.8.4",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "apps/api"}
packages = ["app", "app.collectors", "app.jobs", "app.services", "app.repositories"]

[tool.pytest.ini_options]
pythonpath = ["apps/api"]
testpaths = ["tests"]
